--- a/frontend/src/app/component/shop-page/product-list/search-panel/search-panel.component.html
+++ b/frontend/src/app/component/shop-page/product-list/search-panel/search-panel.component.html
@@ -15,7 +15,7 @@
                       label="Cena do"></app-form-input>
       <app-form-input [fieldRef]="form.get('category')"
                       [inputType]="InputType.DROPDOWN"
-                      [fieldConfig]="{ options: categories, labelField: 'name', multipleDropdown: true }"
+                      [fieldConfig]="{ options: categories, labelField: 'label', multipleDropdown: true }"
                       label="Kategoria"></app-form-input>
       <div class="search-btn-container">
         <button mat-raised-button
