--- a/frontend/src/app/component/shop-page/admin-page/edit-product/edit-product.component.html
+++ b/frontend/src/app/component/shop-page/admin-page/edit-product/edit-product.component.html
@@ -1,5 +1,5 @@
 <div class="product-page">
-  <h1><i class="feather-package"></i>Edycja produktu: {{product?.name}}</h1>
+  <h1><i class="feather-edit"></i>Edycja produktu: {{product?.name}}</h1>
   <div class="details-button-container">
     <app-go-to-product-list></app-go-to-product-list>
   </div>
