--- a/frontend/src/app/component/shop-page/admin-page/order-list/order-list.component.html
+++ b/frontend/src/app/component/shop-page/admin-page/order-list/order-list.component.html
@@ -13,7 +13,42 @@
   <ng-container matColumnDef="orderNo">
     <th mat-header-cell *matHeaderCellDef>Numer zamówienia</th>
     <td mat-cell *matCellDef="let element">
-      #{{element.orderNo}}
+      <span class="bold">#{{element.orderNo}}</span>
+    </td>
+  </ng-container>
+  <ng-container matColumnDef="createdAt">
+    <th mat-header-cell *matHeaderCellDef>Złożono dnia</th>
+    <td mat-cell *matCellDef="let element">
+      {{element.createdAt | date}}
+    </td>
+  </ng-container>
+  <ng-container matColumnDef="orderSum">
+    <th mat-header-cell *matHeaderCellDef>Wartość zamówienia</th>
+    <td mat-cell *matCellDef="let element">
+      {{0}}
+    </td>
+  </ng-container>
+  <ng-container matColumnDef="status">
+    <th mat-header-cell *matHeaderCellDef>Status</th>
+    <td mat-cell *matCellDef="let element">
+      {{element.status}}
+    </td>
+  </ng-container>
+  <ng-container matColumnDef="paid">
+    <th mat-header-cell *matHeaderCellDef>Opłacone</th>
+    <td mat-cell *matCellDef="let element">
+      {{element.paid ? 'TAK' : 'NIE'}}
+    </td>
+  </ng-container>
+  <ng-container matColumnDef="action">
+    <th mat-header-cell *matHeaderCellDef></th>
+    <td mat-cell *matCellDef="let element">
+      <button mat-raised-button
+              color="accent"
+              (click)="openOrderDetails(element.id)">
+        <i class="feather-arrow-up-right"></i>
+        Detale zamówienia
+      </button>
     </td>
   </ng-container>
 
