--- a/frontend/src/app/component/_shared/form-input/form-input.component.html
+++ b/frontend/src/app/component/_shared/form-input/form-input.component.html
@@ -43,13 +43,9 @@
   <mat-checkbox *ngIf="inputType === InputType.CHECKBOX"
                 [formControl]="$any(fieldRef)">{{label}}</mat-checkbox>
   <ng-container *ngIf="inputType === InputType.FILE">
-    <input #fileInput
-           type="file"
-           [hidden]="true"
-           [formControl]="$any(fieldRef)">
-    <button mat-flat-button
-            color="primary"
-            (click)="fileInput.click()">Choose file
-    </button>
+    <app-file-input [formControl]="$any(fieldRef)"></app-file-input>
   </ng-container>
+  <mat-error *ngIf="fieldRef.invalid && (fieldRef.dirty || fieldRef.touched)">
+    <app-field-errors [fieldRef]="fieldRef"></app-field-errors>
+  </mat-error>
 </ng-template>
