--- a/frontend/src/app/component/shop-page/admin-page/users-page/users-page.component.html
+++ b/frontend/src/app/component/shop-page/admin-page/users-page/users-page.component.html
@@ -49,7 +49,7 @@
     <td mat-cell *matCellDef="let element">
       <button mat-button
               color="accent"
-              (click)="deleteUser(element.id, element.username)">
+              (click)="deleteUser(element._id, element.username)">
         <i class="feather-user-x"></i>Usuń
       </button>
     </td>
