--- a/frontend/src/app/component/_shared/update-product/update-product-form.component.html
+++ b/frontend/src/app/component/_shared/update-product/update-product-form.component.html
@@ -2,22 +2,24 @@
   <form [formGroup]="form"
         (ngSubmit)="saveProduct()">
     <div class="product-form">
+      <div class="basic-fields">
+        <app-form-input [fieldRef]="form.get('name')"
+                        [inputType]="InputType.TEXT"
+                        label="Nazwa"></app-form-input>
+        <app-form-input [fieldRef]="form.get('description')"
+                        [inputType]="InputType.TEXTAREA"
+                        label="Opis"></app-form-input>
+        <app-form-input [fieldRef]="form.get('img')"
+                        [inputType]="InputType.FILE"
+                        label="Zdjęcie"></app-form-input>
+        <app-form-input [fieldRef]="form.get('price')"
+                        [inputType]="InputType.NUMBER"
+                        label="Cena"></app-form-input>
+        <app-form-input [fieldRef]="form.get('quantity')"
+                        [inputType]="InputType.NUMBER"
+                        label="Ilość"></app-form-input>
+      </div>
 
-      <app-form-input [fieldRef]="form.get('name')"
-                      [inputType]="InputType.TEXT"
-                      label="Nazwa"></app-form-input>
-      <app-form-input [fieldRef]="form.get('description')"
-                      [inputType]="InputType.TEXTAREA"
-                      label="Opis"></app-form-input>
-      <app-form-input [fieldRef]="form.get('img')"
-                      [inputType]="InputType.FILE"
-                      label="Zdjęcie"></app-form-input>
-      <app-form-input [fieldRef]="form.get('price')"
-                      [inputType]="InputType.NUMBER"
-                      label="Cena"></app-form-input>
-      <app-form-input [fieldRef]="form.get('quantity')"
-                      [inputType]="InputType.NUMBER"
-                      label="Ilość"></app-form-input>
       <h2>Właściwości produktu</h2>
       <table *ngIf="refresh"
              mat-table
