--- a/frontend/src/styles/page/shop-page.style.scss
+++ b/frontend/src/styles/page/shop-page.style.scss
@@ -54,7 +54,10 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .product-list-image {
-  height: 200px;
+  max-width: 100%;
+  max-height: 250px;
+  padding-right: 3rem;
+  box-sizing: border-box;
 }
 
 .delete-user-confirm {
@@ -77,9 +80,3 @@ h1, h2, h3, h4, h5, h6 {
     margin-top: 24px;
   }
 }
-
-//.add-product-button {
-//  margin-bottom: 2rem;
-//  margin-right: 4rem;
-//  float: right;
-//}
