update product quantity with shopping cart state

--- a/frontend/src/app/component/_shared/add-product-button/add-product-button.component.html
+++ b/frontend/src/app/component/_shared/add-product-button/add-product-button.component.html
@@ -2,7 +2,7 @@
   <button class="add-btn"
           mat-button
           color="accent"
-          [disabled]="!amountAvailable"
+          [disabled]="addButtonDisabled()"
           (click)="addProduct()">
     Dodaj
   </button>
