--- a/frontend/src/app/component/shop-page/admin-page/order-list/order-list.component.html
+++ b/frontend/src/app/component/shop-page/admin-page/order-list/order-list.component.html
@@ -45,7 +45,7 @@
     <td mat-cell *matCellDef="let element">
       <button mat-raised-button
               color="accent"
-              (click)="openOrderDetails(element.id)">
+              (click)="openOrderDetails(element._id)">
         <i class="feather-arrow-up-right"></i>
         Detale zamówienia
       </button>
