--- a/frontend/src/app/component/shop-page/product-details/product-details.component.html
+++ b/frontend/src/app/component/shop-page/product-details/product-details.component.html
@@ -16,6 +16,7 @@
       <div class="details-title-container">
         <h1>{{product.name}}</h1>
         <h3>Cena za szt. <span class="bold">{{product.price | currency:'PLN'}}</span></h3>
+        <app-product-quantity [quantity]="product.quantity"></app-product-quantity>
         <app-add-product-button (addProductEvent)="addToCart(product, $event)"></app-add-product-button>
       </div>
     </div>
