--- a/frontend/src/app/component/shop-page/shopping-list/shopping-list.component.html
+++ b/frontend/src/app/component/shop-page/shopping-list/shopping-list.component.html
@@ -54,7 +54,7 @@
     <td mat-cell *matCellDef="let element">
       <button mat-button
               color="warn"
-              (click)="removeItem(element.product.id)">
+              (click)="removeItem(element.product._id)">
         <i class="feather-x-square"></i>Usuń
       </button>
     </td>
