--- a/frontend/src/styles/page/product-details-page.style.scss
+++ b/frontend/src/styles/page/product-details-page.style.scss
@@ -14,6 +14,14 @@
   }
 }
 
+.product-quantity {
+  font-size: 14px;
+
+  .zero {
+    color: $errorColor;
+  }
+}
+
 .mat-dialog-content.details-full-size-img {
   max-height: 100vh;
 }
