--- a/frontend/src/app/component/shop-page/admin-page/order-list/order-list.component.html
+++ b/frontend/src/app/component/shop-page/admin-page/order-list/order-list.component.html
@@ -25,7 +25,7 @@
   <ng-container matColumnDef="orderSum">
     <th mat-header-cell *matHeaderCellDef>Wartość zamówienia</th>
     <td mat-cell *matCellDef="let element">
-      {{0}}
+      {{element.orderValue | currency: 'PLN'}}
     </td>
   </ng-container>
   <ng-container matColumnDef="status">
