--- a/frontend/src/styles/page/_index.scss
+++ b/frontend/src/styles/page/_index.scss
@@ -1,5 +1,6 @@
 @import "add-product-page.style";
 @import "login-page.style";
+@import "order-details.style";
 @import "payment-page.style";
 @import "product-details-page.style";
 @import "shop-page.style";
