--- a/frontend/src/app/component/shop-page/admin-page/order-list/order-list.component.html
+++ b/frontend/src/app/component/shop-page/admin-page/order-list/order-list.component.html
@@ -31,7 +31,8 @@
   <ng-container matColumnDef="status">
     <th mat-header-cell *matHeaderCellDef>Status</th>
     <td mat-cell *matCellDef="let element">
-      {{element.status}}
+      <app-status-label [status]="element.status"
+                        [id]="element._id"></app-status-label>
     </td>
   </ng-container>
   <ng-container matColumnDef="paid">
