--- a/frontend/src/app/component/payment-page/payment-page.component.html
+++ b/frontend/src/app/component/payment-page/payment-page.component.html
@@ -1,4 +1,8 @@
 <div class="centering">
   <h1>STRONA PŁATNOŚCI</h1>
   <h2>** Klient realizuje tutaj płatność wybraną metodą po czym wraca do aplikacji **</h2>
+  <button mat-raised-button
+          color="primary"
+          (click)="payForOrder()">Opłać zamówienie
+  </button>
 </div>
