--- a/frontend/src/app/component/shop-page/product-list/product-list.component.html
+++ b/frontend/src/app/component/shop-page/product-list/product-list.component.html
@@ -1,72 +1,79 @@
 <app-search-panel (search)="search($event)"></app-search-panel>
 
-<table mat-table [dataSource]="products" class="mat-elevation-z8">
+<div class="mat-elevation-z8">
+  <table mat-table [dataSource]="products">
 
-  <ng-container matColumnDef="image">
-    <th mat-header-cell *matHeaderCellDef>Sortuj według:</th>
-    <td mat-cell *matCellDef="let element">
-      <img class="product-list-image"
-           src="../../../../assets/img/example.jpg"
-           alt="product-list-image">
-    </td>
-  </ng-container>
+    <ng-container matColumnDef="image">
+      <th mat-header-cell *matHeaderCellDef>Sortuj według:</th>
+      <td mat-cell *matCellDef="let element">
+        <img class="product-list-image"
+             src="../../../../assets/img/example.jpg"
+             alt="product-list-image">
+      </td>
+    </ng-container>
 
-  <ng-container matColumnDef="name">
-    <th mat-header-cell *matHeaderCellDef>Produkt</th>
-    <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-  </ng-container>
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef>Produkt</th>
+      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+    </ng-container>
 
-  <ng-container matColumnDef="price">
-    <th mat-header-cell *matHeaderCellDef>Cena</th>
-    <td class="price-column"
-        mat-cell *matCellDef="let element">
-      <div class="price">{{element.price | currency:'PLN'}}</div>
-      <app-product-quantity [quantity]="element.quantity"></app-product-quantity>
-    </td>
-  </ng-container>
+    <ng-container matColumnDef="price">
+      <th mat-header-cell *matHeaderCellDef>Cena</th>
+      <td class="price-column"
+          mat-cell *matCellDef="let element">
+        <div class="price">{{element.price | currency:'PLN'}}</div>
+        <app-product-quantity [quantity]="element.quantity"></app-product-quantity>
+      </td>
+    </ng-container>
 
-  <ng-container matColumnDef="action">
-    <th mat-header-cell *matHeaderCellDef>
-      <button *ngIf="isUserLoggedIn"
-              mat-button
-              color="accent"
-              class="add-product-button"
-              (click)="addNewProduct()">
-        <i class="feather-plus-square"></i>
-        Dodaj nowy produkt
-      </button>
-    </th>
-    <td mat-cell *matCellDef="let element"
-        class="row-action-container">
-      <ng-container *ngIf="isUserLoggedIn">
-        <button mat-button color="accent"
-                (click)="editProduct(element._id)">
-          <i class="feather-edit"></i>
-          Edytuj
+    <ng-container matColumnDef="action">
+      <th mat-header-cell *matHeaderCellDef>
+        <button *ngIf="isUserLoggedIn"
+                mat-button
+                color="accent"
+                class="add-product-button"
+                (click)="addNewProduct()">
+          <i class="feather-plus-square"></i>
+          Dodaj nowy produkt
         </button>
-        <button mat-button color="accent"
-                (click)="updateAmountDialog(element._id, element.quantity)">
-          <i class="feather-chevrons-up"></i>
-          Aktualizuj ilość
-        </button>
-        <button mat-button color="warn"
-                (click)="deleteProduct(element._id, element.name)">
-          <i class="feather-x-square"></i>
-          Usuń
-        </button>
-      </ng-container>
-      <ng-container *ngIf="!isUserLoggedIn">
-        <button mat-raised-button color="accent"
-                (click)="goToDetails(element._id)">
-          <i class="feather-arrow-up-right"></i>
-          Otwórz
-        </button>
-        <app-add-product-button [amountAvailable]="element.quantity"
-                                (addProductEvent)="addToCart(element, $event)"></app-add-product-button>
-      </ng-container>
-    </td>
-  </ng-container>
+      </th>
+      <td mat-cell *matCellDef="let element"
+          class="row-action-container">
+        <ng-container *ngIf="isUserLoggedIn">
+          <button mat-button color="accent"
+                  (click)="editProduct(element._id)">
+            <i class="feather-edit"></i>
+            Edytuj
+          </button>
+          <button mat-button color="accent"
+                  (click)="updateAmountDialog(element._id, element.quantity)">
+            <i class="feather-chevrons-up"></i>
+            Aktualizuj ilość
+          </button>
+          <button mat-button color="warn"
+                  (click)="deleteProduct(element._id, element.name)">
+            <i class="feather-x-square"></i>
+            Usuń
+          </button>
+        </ng-container>
+        <ng-container *ngIf="!isUserLoggedIn">
+          <button mat-raised-button color="accent"
+                  (click)="goToDetails(element._id)">
+            <i class="feather-arrow-up-right"></i>
+            Otwórz
+          </button>
+          <app-add-product-button [amountAvailable]="element.quantity"
+                                  (addProductEvent)="addToCart(element, $event)"></app-add-product-button>
+        </ng-container>
+      </td>
+    </ng-container>
 
-  <tr mat-header-row *matHeaderRowDef="columns"></tr>
-  <tr mat-row *matRowDef="let row; columns: columns;"></tr>
-</table>
+    <tr mat-header-row *matHeaderRowDef="columns"></tr>
+    <tr mat-row *matRowDef="let row; columns: columns;"></tr>
+  </table>
+  <mat-paginator [length]="totalRecords"
+                 [pageSize]="10"
+                 [pageSizeOptions]="[5, 10, 20]"
+                 [pageIndex]="pageIndex"
+                 (page)="log($event)"></mat-paginator>
+</div>
