--- a/frontend/src/app/component/shop-page/admin-page/order-list/order-list.component.html
+++ b/frontend/src/app/component/shop-page/admin-page/order-list/order-list.component.html
@@ -8,22 +8,24 @@
     class="no-products-info">Brak zamówień w systemie</h2>
 
 <table *ngIf="orders.length"
-       mat-table [dataSource]="orders"
+       mat-table
+       matSort
+       [dataSource]="orders"
        class="mat-elevation-z8">
   <ng-container matColumnDef="orderNo">
-    <th mat-header-cell *matHeaderCellDef>Numer zamówienia</th>
+    <th mat-header-cell mat-sort-header *matHeaderCellDef>Numer zamówienia</th>
     <td mat-cell *matCellDef="let element">
       <span class="bold">#{{element.orderNo}}</span>
     </td>
   </ng-container>
   <ng-container matColumnDef="createdAt">
-    <th mat-header-cell *matHeaderCellDef>Złożono dnia</th>
+    <th mat-header-cell mat-sort-header *matHeaderCellDef>Złożono dnia</th>
     <td mat-cell *matCellDef="let element">
       {{element.createdAt | date}}
     </td>
   </ng-container>
   <ng-container matColumnDef="orderSum">
-    <th mat-header-cell *matHeaderCellDef>Wartość zamówienia</th>
+    <th mat-header-cell mat-sort-header *matHeaderCellDef>Wartość zamówienia</th>
     <td mat-cell *matCellDef="let element">
       {{element.orderValue | currency: 'PLN'}}
     </td>
