--- a/frontend/src/app/component/shop-page/product-list/product-list.component.html
+++ b/frontend/src/app/component/shop-page/product-list/product-list.component.html
@@ -1,7 +1,11 @@
 <app-search-panel (search)="search($event)"></app-search-panel>
 
-<div class="mat-elevation-z8">
-  <table mat-table [dataSource]="products">
+<div *ngIf="products"
+     class="mat-elevation-z8">
+  <table mat-table
+         matSort
+         (matSortChange)="sortData($event)"
+         [dataSource]="products.content">
 
     <ng-container matColumnDef="image">
       <th mat-header-cell *matHeaderCellDef>Sortuj według:</th>
@@ -13,12 +17,18 @@
     </ng-container>
 
     <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef>Produkt</th>
+      <th mat-header-cell
+          mat-sort-header
+          *matHeaderCellDef>Produkt
+      </th>
       <td mat-cell *matCellDef="let element"> {{element.name}} </td>
     </ng-container>
 
     <ng-container matColumnDef="price">
-      <th mat-header-cell *matHeaderCellDef>Cena</th>
+      <th mat-header-cell
+          mat-sort-header
+          *matHeaderCellDef>Cena
+      </th>
       <td class="price-column"
           mat-cell *matCellDef="let element">
         <div class="price">{{element.price | currency:'PLN'}}</div>
@@ -71,9 +81,9 @@
     <tr mat-header-row *matHeaderRowDef="columns"></tr>
     <tr mat-row *matRowDef="let row; columns: columns;"></tr>
   </table>
-  <mat-paginator [length]="totalRecords"
-                 [pageSize]="10"
+  <mat-paginator [length]="products.totalRecords"
+                 [pageSize]="products.pageSize"
                  [pageSizeOptions]="[5, 10, 20]"
-                 [pageIndex]="pageIndex"
-                 (page)="log($event)"></mat-paginator>
+                 [pageIndex]="products.page"
+                 (page)="fetchData($event.pageIndex, $event.pageSize)"></mat-paginator>
 </div>
