uploading files and product details

--- a/frontend/src/app/component/shop-page/admin-page/order-list/order-details-dialog/order-details-dialog.component.html
+++ b/frontend/src/app/component/shop-page/admin-page/order-list/order-details-dialog/order-details-dialog.component.html
@@ -51,6 +51,9 @@
       </div>
     </div>
   </div>
+
+  <h3>Zamówione produkty</h3>
+  <app-products-in-order [orderItems]="order.products"></app-products-in-order>
 </div>
 
 <div mat-dialog-actions
