added miniature version for images

--- a/frontend/src/app/component/shop-page/product-details/product-details.component.html
+++ b/frontend/src/app/component/shop-page/product-details/product-details.component.html
@@ -5,7 +5,7 @@
   <mat-card-content>
     <div class="details-title-section">
       <div class="img-container">
-        <img src="../../../../assets/img/example.jpg"
+        <img src="{{'data:image/jpeg;base64,' + product.fullImg}}"
              alt="placeholder">
         <div class="search-icon"
              (click)="showFullScreenImg()">
