--- a/frontend/src/app/component/shop-page/product-list/product-list.component.html
+++ b/frontend/src/app/component/shop-page/product-list/product-list.component.html
@@ -11,7 +11,7 @@
       <th mat-header-cell *matHeaderCellDef>Sortuj według:</th>
       <td mat-cell *matCellDef="let element">
         <img class="product-list-image"
-             src="../../../../assets/img/example.jpg"
+             src="{{'data:image/jpeg;base64,' + element.minImg}}"
              alt="product-list-image">
       </td>
     </ng-container>
