added test data

--- a/frontend/src/app/component/shop-page/product-details/image-dialog/image-dialog.component.html
+++ b/frontend/src/app/component/shop-page/product-details/image-dialog/image-dialog.component.html
@@ -1,4 +1,4 @@
 <div class="details-full-size-img" mat-dialog-content>
-  <img [src]=imgRef
+  <img src="{{'data:image/jpeg;base64,' + imgRef}}"
        alt="product-full-size">
 </div>
