--- a/frontend/src/styles/page/shop-page.style.scss
+++ b/frontend/src/styles/page/shop-page.style.scss
@@ -55,7 +55,7 @@ h1, h2, h3, h4, h5, h6 {
 .product-list-image {
   max-width: 100%;
   max-height: 250px;
-  padding-right: 3rem;
+  padding: 1rem 3rem 1rem 1rem;
   box-sizing: border-box;
 }
 
