--- a/frontend/src/app/component/shop-page/admin-page/order-list/search-panel/search-panel.component.html
+++ b/frontend/src/app/component/shop-page/admin-page/order-list/search-panel/search-panel.component.html
@@ -13,7 +13,7 @@
                       label="Do dnia"></app-form-input>
       <app-form-input [fieldRef]="form.get('status')"
                       [inputType]="InputType.DROPDOWN"
-                      [fieldConfig]="{ options: PRODUCT_CATEGORY, multipleDropdown: true }"
+                      [fieldConfig]="{ options: ORDER_STATUS, multipleDropdown: true }"
                       label="Status"></app-form-input>
       <div class="search-btn-container">
         <button mat-raised-button
